--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -12,11 +12,13 @@
 
 .handshakeImg{
   height: 70vh;
+  min-height: 600px;
 }
 
 @media only screen and (max-width: 600px) {
   .handshakeImg{
     width: 80vw;
     height: auto;
+    min-height: auto;
   }
 }
